Change docker version management
Add more test and remove all old v2 api usage